--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -1030,13 +1030,13 @@
       traHang: {},
       donHoan: {},
 
-      sizechoXacNhan: {},
-      sizechoLayHang: {},
-      sizechoGiaoHang: {},
-      sizedaGiao: {},
-      sizedonHuy: {},
-      sizetraHang: {},
-      sizedonHoan: {},
+      sizechoXacNhan: 0,
+      sizechoLayHang: 0,
+      sizechoGiaoHang: 0,
+      sizedaGiao: 0,
+      sizedonHuy: 0,
+      sizetraHang: 0,
+      sizedonHoan: 0,
 
       showModal: false,
       checkStatus: true,
