--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -142,7 +142,7 @@
         </div>
         <!--Side Navbar-->
 
-        <!--Main area-->
+        
 
         <div class="flex-1">
             <!--Top navbar-->
@@ -162,6 +162,8 @@
             </div>
             <!--Top navbar-->
 
+            
+        <!--Main area-->
             <div class="card-container" style="margin: 5px">
                 <div class="card w-full">
                     <div class="card-header">
@@ -213,7 +215,7 @@
                     </div>
 
 
-                    <div style="border-radius: 8px;overflow: auto;">
+                    <div style="border-radius: 8px;overflow: auto;min-height: 100vh;">
                         <div class="card-body">
 
                             <table class="table table-bordered ">
