update form chữ

--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -11,6 +11,9 @@
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
     .table td {
       vertical-align: middle;
       font-size: 15px;
@@ -169,7 +172,7 @@
     }
 
     .box-Main-One {
-      width: 16%;
+      width: 17%;
       height: 100%;
       background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
       display: flex;
