--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -8,6 +8,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
     .btn {
       font-size: 14px;
       font-weight: bold;
@@ -151,7 +154,7 @@
     }
 
     .box-Main-One {
-      width: 16%;
+      width: 17%;
       height: 100%;
       background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
       display: flex;
