--- a/Server/Views/screenNotifications.hbs
+++ b/Server/Views/screenNotifications.hbs
@@ -9,6 +9,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
     .mess {
       position: relative;
       display: inline-block;
@@ -150,7 +153,7 @@
     }
 
     .box-Main-One {
-      width: 16%;
+      width: 17%;
       height: 100%;
       background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
       display: flex;
