--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -11,6 +11,9 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
     .mess {
       position: relative;
       display: inline-block;
@@ -44,7 +47,7 @@
     }
 
     .box-Main-One {
-      width: 16%;
+      width: 17%;
       height: 100%;
       background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
       display: flex;
