--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -12,6 +12,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
     .mess {
       position: relative;
       display: inline-block;
@@ -147,7 +150,7 @@
     }
 
     .box-Main-One {
-      width: 16%;
+      width: 17%;
       height: 100%;
       background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
       display: flex;
