--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -383,7 +383,7 @@
             <div class="mx-3 text-sm text-gray-100">Thông báo</div>
           </div>
         </a>
-        <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+        <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
           <div class="flex" style="padding: 12px;">
             <div>
               <img class="w-5 h-5 " src="iconuser.png" alt="">
