--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -15,6 +15,7 @@
     body {
       font-family: 'Arial', sans-serif;
     }
+
     .mess {
       position: relative;
       display: inline-block;
@@ -379,7 +380,8 @@
             <div class="mx-3 text-sm text-gray-100">Thông báo</div>
           </div>
         </a>
-        <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+        <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12"
+           style="display: flex; text-decoration: none">
           <div class="flex" style="padding: 12px;">
             <div>
               <img class="w-5 h-5 " src="iconuser.png" alt="">
@@ -691,7 +693,8 @@
       checkStatus: true,
       selectedValueGender: 'Tất cả',
       selectedValueMoney: 'Giá',
-      dataCate: 'all',
+      dataCate: 'men',
+      dataCateTwo: 'women',
       searchData: '',
       selectGender: 'Giới tính',
       selectGenderClick: [
@@ -712,9 +715,6 @@
         self.GetAllDataChat();
         self.GetDataCart();
         self.GetDataNameUser();
-        if (self.idUser.length > 0) {
-          self.OpenChatUser(self.idUser);
-        }
       });
 
       this.socket = socket;
@@ -799,26 +799,46 @@
         var self = this
         if (value === 'highttolow') {
           self.selectedValueMoney = 'Giá: Cao đến Thấp'
-          self.loadDataSortWarehouse(self.dataCate, 'highttolow')
+          const dataSreachs = self.dataSearch.filter(product => product.product_category === self.dataCate || product.product_category === self.dataCateTwo).sort((a, b) => b.product_price - a.product_price);
+
+          var dataAll = splitList(dataSreachs, 4)
+          self.dataWarehouseAll = dataAll
+          self.toatalWare = dataSreachs.length
         } else {
           self.selectedValueMoney = 'Giá: Thấp đến Cao'
-          self.loadDataSortWarehouse(self.dataCate, 'lowtohight')
+          const dataSreachs = self.dataSearch.filter(product => product.product_category === self.dataCate || product.product_category === self.dataCateTwo).sort((a, b) => a.product_price - b.product_price);
+
+          var dataAll = splitList(dataSreachs, 4)
+          self.dataWarehouseAll = dataAll
+          self.toatalWare = dataSreachs.length
         }
       },
       selectOptionGender(value) {
         var self = this
         if (value === 'all') {
-          self.dataCate = 'all'
+          self.dataCate = 'men'
+          self.dataCateTwo = 'women'
           self.selectedValueGender = 'Tất cả'
-          self.loadDataWarehouseLast();
+          const dataSreachs = self.dataSearch;
+          var dataAll = splitList(dataSreachs, 4)
+          self.dataWarehouseAll = dataAll
+          self.toatalWare = dataSreachs.length
         } else if (value === 'men') {
           self.selectedValueGender = 'Nam'
           self.dataCate = 'men'
-          self.loadDataWarehouse('men')
+          self.dataCateTwo = 'men'
+          const dataSreachs = self.dataSearch.filter(product => product.product_category === 'men');
+          var dataAll = splitList(dataSreachs, 4)
+          self.dataWarehouseAll = dataAll
+          self.toatalWare = dataSreachs.length
         } else {
           self.selectedValueGender = 'Nữ'
           self.dataCate = 'women'
-          self.loadDataWarehouse('women')
+          self.dataCateTwo = 'women'
+          const dataSreachs = self.dataSearch.filter(product => product.product_category === 'women');
+          var dataAll = splitList(dataSreachs, 4)
+          self.dataWarehouseAll = dataAll
+          self.toatalWare = dataSreachs.length
         }
       },
       formatPrice(value) {
